arrumei os error part2

--- a/teste/index1.html
+++ b/teste/index1.html
@@ -6,15 +6,7 @@
 <script 	
     src="./main.js"
     src="./reset.css">
-    
-    var novaTabela = document.createElement("table");
-    var cabecalho = document.createElement("thead");
-var corpo = document.createElement("tbody");
 
-tabela.appendChild(cabecalho);
-tabela.appendChild(corpo);
-
-document.getElementById("test").appendChild(tabela);
 var container = document.getElementById("container");
 
 
@@ -32,7 +24,7 @@ var container = document.getElementById("container");
 
 
 <div id="container"></div>
-<form 	style="border: 1px double blue; background-color: #DDF;
+<form 	style="border: 1px double pink; background-color: palevioletred;
 	padding: 4px;text-align:center;"
 	name="convert">
 
@@ -58,11 +50,9 @@ onchange="convertTemp('ktof')">
 
 <br /><br />
 <input 	type="button" 
-	value="limpar" 
+	value="Clean" 
     onclick="clearAll();">
-    <input 	type="button" 
-	value="converter" 
-	onclick="clearAll();">
+    
 </form>
 </body>
 </html>
